--- a/src/Row.css
+++ b/src/Row.css
@@ -1,3 +1,11 @@
+.row{
+  color:white;
+  margin-left: 20px;
+}
+/*
+  move all the row to the right give litter gap to the left
+*/
+
 
 .row__posters{
   display: flex;
