--- a/src/Banner.css
+++ b/src/Banner.css
@@ -38,18 +38,18 @@
   padding-bottom: 0.5rem;
 }
 
-.banner__button:hover{
-  color:#000;
-  background-color:white;
-  transition:all 0.2s;
+.banner__button:hover {
+  color: #000;
+  background-color: white;
+  transition: all 0.2s;
 }
 
-.banner--fadeBottom{
+.banner--fadeBottom {
   height: 7.4rem;
   background-image: linear-gradient(
     180deg,
     transparent,
-    rgba(37,37,37,0.61),
+    rgba(37, 37, 37, 0.61),
     #111
   );
 }
